--- a/index.scss
+++ b/index.scss
@@ -107,7 +107,7 @@ body{
                         left: 0;
                         h4{
                             color: $white;
-                            text-transform: capitalize;
+                            text-transform: uppercase;
                             font-size: 2rem;
                         }
                         h1{
@@ -189,6 +189,161 @@ body{
                         background: $white;
                         text-transform: capitalize;
                     }
+                }
+            }
+        }
+    }
+    // events summary
+    .event-summary-collection{
+        height: 100vh;
+        .event-summary-collection-cards{
+            width: 100%;
+            height: 75vh;
+            background-color: $white;
+            position: relative;
+            &::after{
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 50%;
+                bottom: 0;
+                left: 0;
+                background-color: $primary-color;
+                z-index: 1;
+            }
+            .event-summary-collection-card-details{
+                width: 80%;
+                height: 90%;
+                z-index: 2;
+                .event-summary-collection-card-details-header{
+                    h4{
+                        text-transform: uppercase;
+                        color: $secondary-color;
+                        font-size: 24px;
+                        font-weight: 500;
+                    }
+                    h6{
+                        color: $primary-color;
+                    }
+                }
+                .event-summary-collection-card-details-main{
+                    img{
+                        height: 18.75rem;
+                        box-shadow: 10px 10px 0px 0px rgba(70, 164, 163,1);
+                    }
+                    h6{
+                        color: $white;
+                        text-transform: uppercase;
+                        margin-top: 2rem;
+                        font-weight: 600;
+                    }
+                    a{
+                        color: $secondary-color;
+                        text-decoration: none;
+                        text-transform: capitalize;
+                    }
+                }
+            }
+        }
+        // event registration
+        .events-register{
+            background-color: $white;
+            height: 25vh;
+            .events-register-content{
+                height: 80%;
+                width: 70%;
+                p{
+                    color: $text;
+                }
+                button{
+                    outline: none;
+                    border: none;
+                    background: $secondary-color;
+                    padding: 10px 30px;
+                    color: $white;
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
+    //footer
+    .footer-section{
+        height: 500px;
+        background-color: $primary-color;
+        .footer-main{
+            height: 80%;
+            width: 80%;
+            img{
+                height: 4rem;
+            }
+            .footer-logo-content{
+                border-right: 1px solid rgba($color: #ffffff, $alpha: 0.5);
+                padding-right: 2rem;
+                p{
+                    margin-top: 1.5rem;
+                    color: $white;
+                }
+            }
+            .footer-menu{
+                border-right: 1px solid rgba($color: #ffffff, $alpha: 0.5);
+                padding-right: 2rem;
+                ul{
+                    margin-top: 5rem;
+                    li{
+                        list-style-type: none;
+                        margin-top: 1rem;
+                        a{
+                            color: $white;
+                            text-decoration: none;
+                            font-weight: 500;
+                        }
+                    }
+                }
+            }
+            .footer-social-content{
+                ul{
+                    li{
+                        list-style-type: none;
+                        display: inline;
+                        .facebook{
+                            padding: 10px 16px;
+                            background-color: $white;
+                            color: $primary-color;
+                            border-radius: 50%;
+                            margin-left: -2.1rem;
+                        }
+                        .insta{
+                            padding: 10px 14px;
+                            background-color: $white;
+                            color: $primary-color;
+                            border-radius: 50%;
+                            margin-left: 0.5rem;
+                        }
+                        .twitter{
+                            padding: 10px 13px;
+                            background-color: $white;
+                            color: $primary-color;
+                            border-radius: 50%;
+                            margin-left: 0.5rem;
+                        }
+                        .youtube{
+                            padding: 10px 12px;
+                            background-color: $white;
+                            color: $primary-color;
+                            border-radius: 50%;
+                            margin-left: 0.5rem;
+                        }
+                        .linked{
+                            padding: 10px 14px;
+                            background-color: $white;
+                            color: $primary-color;
+                            border-radius: 50%;
+                            margin-left: 0.5rem;
+                        }
+                    }
+                }
+                p{
+                    color: $white;
                 }
             }
         }
